# nixos-test-driver-manual

./: .gitignore  README.md  flake.nix  gpu.tape  mkdocs.yml
.github/workflows/: static.yml
docs/: changelog.md  extra.css  index.md  mkdocs.yml  setup.md
docs/best-practices/: force-kvm.md  index.md  pkgs-attribute.md  service-race-conditions.md  timeout.md
docs/best-practises/: index.md  pkgs-attribute.md  service-race-conditions.md  timeout.md  use-parallelism.md
docs/docs/: index.md  setup.md
docs/docs/features/: container.md  index.md
docs/docs/tutorials/: minimal.md  multi-network-tests.md  test-in-extra-package.md
docs/features/: container.md  error-hook.md  index.md  interactive.md  linting.md  log-levels.md  module-composition.md  networking.md  screenshots-and-ocr.md  vm.md
docs/theme-overrides/partials/integrations/analytics/: custom.html
docs/tutorials/: applying-overlays.md  connecting-to-nodes-in-interactive.md  cuda-tests.md  graphical-vm-tests.md  headscale-tailscale-mesh.md  index.md  minimal.md  multi-network-tests.md  test-in-extra-package.md
examples/: browser.nix  flake.nix  headscale.nix  minimal.nix  multi-network.nix  overlay.nix  ping.nix  run-test.nix
examples/cuda/: amd.nix  generic.nix  nixos-test-driver-gpu.patch  nvidia.nix  overlay.nix
examples/echo/: default.nix
examples/python-package/: default.nix
examples/python-package/usertest/: default.nix  pyproject.toml
examples/python-package/usertest/src/usertest/: __init__.py
layouts/: custom.yml
scripts/: test-driver-changelog.sh
