[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usertest"
version = "0.1.0"
description = "Reusable NixOS test driver helpers"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
usertest = ["py.typed"]
