[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usertest"
version = "0.1.0"
description = "Reusable NixOS test driver helpers"
requires-python = ">=3.11"
dependencies = [
  "nixos-test-driver",
]

[project.optional-dependencies]
dev = [
  "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
usertest = ["py.typed"]

[tool.ty.src]
include = ["src/usertest"]

[tool.ty.rules]
unresolved-import = "error"
